--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -1,14 +1,14 @@
-- title: Twitch
+- title: TWITCH
   bg: images/iwd-logo.jpg
   desc: this young man streams League of Legends everyday!
   link: https://www.twitch.tv/iwilldominate
 
-- title: youtube
+- title: YOUTUBE
   bg: images/twitch.jpg
   desc: Iwdominate Editor FedMyster edits highlights of his games
   link: https://www.youtube.com/channel/UCmEu9Y8nodUV0jvsR9NYLJA
 
-- title: twitter
+- title: TWITTER
   bg: images/twitter-iwd.jpg
   desc: Iwilldominate is a LCS vetearn get his random thoughts and sorry you are not entitled to an opinion unless you are a coach, analyst, or pro
   link: https://twitter.com/liquiddominate?lang=en
